# cairo-dock-plug-ins

./: .bzrignore  Applets.stable  CMakeLists.txt  ChangeLog  Disks  Makefile  Makefile.am  Makefile.in  README.md  config.h.in  config.status  configure  configure.ac  copyright  generate-new-applet.sh  libtool
Animated-icons/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Animated-icons/autom4te.cache/: output.0  output.1  output.2  output.3  traces.1  traces.3
Animated-icons/data/: Animated-icons.conf  Animated-icons.conf.in  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  readme  readme.in  spot.png.ini
Animated-icons/po/: Makefile  Makefile.in  Makefile.in.in  Makevars  cairo-dock.pot  fr.gmo  fr.po  it.gmo  it.po  ja.gmo  ja.po  zh_CN.gmo  zh_CN.po
Animated-icons/src/: .applet-init.c.swo  .applet-init.c.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  applet-blink.c  applet-blink.h  applet-bounce.c  applet-bounce.h  applet-busy.c  applet-busy.h  applet-config.c  applet-icon-renderer.c  applet-icon-renderer.h  applet-init.c  applet-mesh-factory.c  applet-mesh-factory.h  applet-notifications.c  applet-notifications.h  applet-pulse.c  applet-pulse.h  applet-rays.c  applet-rays.h  applet-rotation.c  applet-rotation.h  applet-spot.c  applet-spot.h  applet-struct.h  applet-unfold.c  applet-unfold.h  applet-wave.c  applet-wave.h  applet-wobbly.c  applet-wobbly.h  chrome-tex.h
Cairo-Penguin/: configure.ac
Cairo-Penguin/Xgamma/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/alsaMixer/: Makefile  aclocal.m4  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/clock/: Makefile  config.h  config.h.in  config.status  configure  intltool-update  libtool
Cairo-Penguin/data/: CMakeLists.txt  Cairo-Penguin.conf.in  Makefile.am  messages  readme.in
Cairo-Penguin/dustbin/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/gnome-integration/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
Cairo-Penguin/logout/: Makefile  config.h  config.status  configure  intltool-update  libtool
Cairo-Penguin/mail/: Makefile  config.h  config.h.in  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/po/: LINGUAS  Makefile.in.in  Makevars  cairo-dock.pot  fr.gmo  fr.po  it.po  ja.po  ru.po  sv.po  zh_CN.po
Cairo-Penguin/powermanager/: Makefile  config.h  config.status  configure  intltool-update  libtool
Cairo-Penguin/rendering/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/rhythmbox/: Makefile  config.h  config.status  configure  intltool-update  libtool
Cairo-Penguin/shortcuts/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/showDesklets/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/src/: CMakeLists.txt  Makefile.am  applet-animation.c  applet-animation.h  applet-config.c  applet-config.h  applet-init.c  applet-init.h  applet-load-icons.c  applet-load-icons.h  applet-notifications.c  applet-notifications.h  applet-struct.h  applet-theme.c  applet-theme.h
Cairo-Penguin/switcher/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/systray/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  intltool-update  libtool
Cairo-Penguin/template/: configure.ac
Cairo-Penguin/terminal/: Makefile  Makefile.in  config.h  config.status  configure  intltool-update  libtool
Cairo-Penguin/test/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/tomboy/: Makefile  config.h  config.status  configure  configure.ac  intltool-update
Cairo-Penguin/weather/: Makefile  config.h  config.status  configure  intltool-merge  intltool-update  libtool
Cairo-Penguin/wifi/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
Cairo-Penguin/xmms/: Makefile  Makefile.in  config.h  config.status  configure  intltool-update  libtool
Clipper/: Makefile.am  configure.ac
Clipper/data/: CMakeLists.txt  Clipper-actions-gnome.conf  Clipper-actions-kde.conf  Clipper-actions-xfce.conf  Clipper.conf.in  Makefile.am  readme.in
Clipper/po/: Makefile.in.in  Makevars  cairo-dock.pot  fr.po  it.po  ja.po  ru.po  (+1 more)
Dbus/: CMakeLists.txt  configure.ac  make_dbus_header.sh
Doncky/: configure.ac
GMenu/: Makefile  config.h  config.h.in  config.status  configure.ac  intltool-update
Indicator-applet/: CMakeLists.txt  indicator-applet.c  indicator-applet.h
Indicator-applet3/: CMakeLists.txt  indicator-applet3-utils.c  indicator-applet3-utils.h  indicator-applet3.c  indicator-applet3.h
Network-Monitor/: configure.ac
RSSreader/: configure.ac
Scooby-Do/: configure.ac
System-Monitor/: configure.ac
Toons/: CMakeLists.txt  Makefile.am  configure.ac
Xgamma/: configure.ac
alsaMixer/: CMakeLists.txt  Makefile.am  configure.ac
clock/: configure.ac
compiz-icon/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
cpusage/: Makefile.am  configure.ac  intltool-merge.in
desklet-rendering/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  intltool-update  libtool  toto
dialog-rendering/: Makefile.am  configure.ac  intltool-extract.in  intltool-merge.in  intltool-update.in
dnd2share/: configure.ac
dock-rendering/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  intltool-merge  intltool-update  libtool
drop-indicator/: Makefile  config.h  config.status  configure  configure.ac  intltool-update  libtool
dustbin/: configure.ac
file-manager-gnome/: Makefile.am  configure.ac
gnome-integration/: Makefile.am  configure.ac  intltool-update
gnome-integration-old/: Makefile.am  configure.ac
(+3497 files in other folders)
